# schemaopt_openenv

./: .gitignore  Dockerfile  README.md  context.md  download.py  implementation_suggestions.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  schemaopt_inference.py  tasks.py
schemaopt_env/: README.md  client.py  models.py  pyproject.toml  spider_registry.py  task_reformulation_notes.md  tasks.py
schemaopt_env/scripts/: build_task_assets.py  debug_walk_plan.py  enrich_curated_task_assets.py  validate_curated_task_assets.py
schemaopt_env/server/: Dockerfile  app.py  desc.md  requirements.txt  rubrics.py  schemaopt_environment.py
schemaopt_env/task_assets/: schemaopt_easy_customer360.json  schemaopt_easy_hiring_pipeline.json  schemaopt_easy_lever.json  schemaopt_easy_pendo.json  schemaopt_easy_product_adoption.json  schemaopt_easy_salesforce.json  schemaopt_hard_google_play.json  schemaopt_hard_hubspot.json  schemaopt_hard_jira.json  schemaopt_hard_lifecycle_engagement.json  schemaopt_hard_marketo.json  schemaopt_hard_mobile_revenue_ops.json  schemaopt_medium_ad_reporting.json  schemaopt_medium_app_reporting.json  schemaopt_medium_asana.json  schemaopt_medium_campaign_performance.json  schemaopt_medium_delivery_operations.json  schemaopt_medium_google_ads.json
schemaopt_env/task_assets/schemaopt_curated/campaign_performance/: campaign_performance_start.duckdb
schemaopt_env/task_assets/schemaopt_curated/delivery_operations/: delivery_operations_start.duckdb
schemaopt_env/task_assets/schemaopt_curated/hiring_pipeline/: hiring_pipeline_start.duckdb
(+21 files in other folders)
