[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-schemaopt"
version = "0.1.0"
description = "Schema optimization OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core[core]>=0.2.1",
  "duckdb>=1.5.1",
  "fastapi>=0.115.0",
  "huggingface_hub>=0.30.0",
  "pydantic>=2.0.0",
  "uvicorn>=0.24.0",
  "requests>=2.31.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["server"]
py-modules = ["client", "models", "tasks"]
