[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-schemaopt_env"
version = "0.1.0"
description = "Schema optimization OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core[core]>=0.2.1",
  "duckdb>=1.1.3",
  "sqlglot>=25.20.0",
  "fastapi>=0.115.0",
  "pydantic>=2.0.0",
  "uvicorn>=0.24.0",
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
server = "schemaopt_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["schemaopt_env", "schemaopt_env.server"]
package-dir = { "schemaopt_env" = ".", "schemaopt_env.server" = "server" }
